--- a/starter folder/outputs/paper/paper.Rmd
+++ b/starter folder/outputs/paper/paper.Rmd
@@ -2,11 +2,10 @@
 title: "My title"
 subtitle: "My subtitle if needed"
 author: 
-  - First author
-  - Another author
-thanks: "Code and data are available at: LINK."
+  - Pascal Lee Slew
+thanks: "Code and data are available at: https://github.com/Pascal-304/Toronto-homicides/tree/main/starter%20folder."
 date: "`r format(Sys.time(), '%d %B %Y')`"
-abstract: "First sentence. Second sentence. Third sentence. Fourth sentence."
+abstract: "Homicide is the crime of killing with intent. It affects people on all walks of life and is an indication of safety/psychology of the population. We obtain the number of homicides in Toronto from the City of Toronto open portal and analyzed it using a graph. We found that homicide rate ... Our findings have implications for ...Second sentence. Third sentence. Fourth sentence."
 output:
   bookdown::pdf_document2
 toc: FALSE
@@ -15,12 +14,34 @@ bibliography: references.bib
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+#### Preamble ####
+# Purpose: Read in data from ASR homicide dataset and make a descriptive analysis
+# present graph and tables
+# Author: Pascal Lee Slew
+# Email: pascal.leeslew@mail.utoronto.ca
+# Date: 06 February 2022
+# Prerequisites: -
 
+# loading the required libraries
 library(tidyverse)
-library(palmerpenguins)
+library(janitor)
+library(knitr)
+library(dplyr)
+library(sf)
+
+#load dataset
+toronto_homicides <- 
+  read_csv(here::here("inputs/data/toronto_homicides.csv"))
+
+# clean the variable names - make them lowercase
+toronto_homicides_clean <- clean_names(toronto_homicides)
 ```
 
 # Introduction
+
+
+
+The remaining of this paper is: Section\@ref(data) explains the data. Section\@ref(references) includes the references used in this paper.
 
 You can and should cross-reference sections and sub-sections. For instance, Section \@ref(data). R Markdown automatically makes the sections lower case and adds a dash to spaces to generate labels, for instance, Section \@ref(first-discussion-point). 
 
@@ -28,75 +49,145 @@ You can and should cross-reference sections and sub-sections. For instance, Sect
 
 # Data
 
-Our data is of penguins (Figure \@ref(fig:bills)).
+This report used data obtained from the Toronto's Police Service's Annual Statistical Report (ASR). [@citeASR] The ASR is annual overview of police operations, covering different subjects from police budget, traffic collisions to crimes including homicides. The Toronto Police Service has made datasets open to the public in 2019. They are publicly available and can be obtained from the Toronto Police Service Public Safety Data Portal ot the City of Toronto Open Data Portal. The goal is to increase transparency and public understanding of police data. 
 
-```{r bills, fig.cap="Bills of penguins", echo = FALSE}
-ggplot(penguins, aes(x = island, fill = species)) +
-  geom_bar(alpha = 0.8) +
-  scale_fill_manual(values = c("darkorange","purple","cyan4"),
-                    guide = FALSE) +
-  theme_minimal() +
-  facet_wrap(~species, ncol = 1) +
-  coord_flip()
+The homicides dataset was obtained using the R package opendatatoronto [@citeopendatatoronto]. The R packages tidyverse [@citetidyverse], dplyr [@citedplyr], knitr [@citeknitr], kableExtra [@citekableExtra] and janitor [@citejanitor] were used to wrangle, extract and analyze the data in R [@citeR]. The dataset was last updated on March 23rd, 2021.
+
+The dataset comprised of all types of homicides reported to the Toronto Police Service (TPS) from 2004 to 2020. Homicides can be reported through diverse means namely e-mail, phone call and fax. The TPS has a special division for investigation of homicides. The TPS also encourages anyone who holds any information that may help with the investigations to come forward. The homicides dataset only contains temporal and spacial information. Information on the victims were omitted to record unbiased information and protect the privacy of the victims. Another consideration made was recording the occurrences to the nearest road intersection node. This imply that the number of homicides for the 140 neighbourhoods may not be accurate. The time of occurrence may also not be accurate since there is bias in which people may hesitate to immediately report. Additionally, it is unknown if the homicide occurrences were all case resolved or include cold cases.   
+
+
+The Toronto homicides dataset contains information on all homicides in Toronto from 2004 to 2020. It contains 1166 observations of 10 variables. Of the 10 variables, I kept only 6 of them. The variables id, event_unique_id and object_id were removed since they are identifiers of the homicide occurrences and do not provide details on the occurrence. While hood_id was removed because it represented similar information to neighbourhood but neighbourhood gives more easily understood information.   
+
+The table (Table \@ref(tab:dataextract)) below shows an extract of the dataset: 
+
+```{r dataextract, echo = FALSE, fig.width=2}
+
+
+
+#remove identifiers and unnecessary variables
+#create a table to show an extract of dataset
+toronto_homicides %>% 
+  select(-c("_id", "ObjectId", "Event_Unique_Id", "Hood_ID")) %>% 
+  slice(1:10) %>% 
+  kable(
+    caption = "First ten rows of a dataset of homicides ... in Toronto",
+    col.names = c("Occurrence year", "Division", "Homicide type", "Occurrence date", "Neighbourhood", "Geometry"),
+    booktabs = TRUE,
+    linesep = "",
+    align = c('c', 'c', 'c', 'c', 'c', 'c', 'c', 'c')
+    ) %>% kableExtra::kable_styling()
+
+
 ```
 
-Talk more about it.
 
-Also bills and their average (Figure \@ref(fig:billssssss)). (Notice how you can change the height and width so they don't take the whole page?)
+```{r, include = FALSE, message=FALSE, warning=FALSE}
+#create occurrence_month variable
+toronto_homicides_clean_01 <- toronto_homicides_clean %>% 
+  separate(col = occurrence_date,
+           into = c("year1", "occurrence_month", "other"),
+           sep = "-") %>% 
+  select(-c("year1", "other"))
 
-```{r billssssss, fig.cap="More bills of penguins", echo = FALSE, fig.width=8, fig.height=4}
+# recoding the names for occurrence_month
+toronto_homicides_clean_03 <-
+  toronto_homicides_clean_01 %>% 
+  mutate(
+    occurrence_month =
+      recode(
+        occurrence_month,
+        '01' = 'January',
+        '02' = 'February',
+        '03' = 'March',
+        '04' = 'April',
+        '05' = 'May',
+        '06' = 'June',
+        '07' = 'July',
+        '08' = 'August',
+        '09' = 'September',
+        '10' = 'October',
+        '11' = 'November',
+        '12' = 'December'
+      )
+  )
 
-# This needs to be about the random data tha tI sasmpled?
-ggplot(penguins, aes(x = island, fill = species)) +
-  geom_bar(alpha = 0.8) +
-  scale_fill_manual(values = c("darkorange","purple","cyan4"),
-                    guide = FALSE) +
-  theme_minimal() +
-  facet_wrap(~species, ncol = 1) +
-  coord_flip()
 ```
 
-Talk way more about it. 
+
+First, we look at the homicide trend from 2004 to 2020. From (Figure \@ref(fig:trend)), the number of homicides has an increasing trend overall for years 2004 to 2007. From 2008 to 2011, a decreasing trend can be observed. For years 2012 to 2015, the number of homicides has remained steady. The city of Toronto has recorded the highest occurrence of homicides in 2018. From 2018 onwards, the number of homicides has been decreasing. While it is important to keep the homicide rate low, understanding the reasons for the such trends is critical. 
+
+```{r trend, fig.cap = "General homicide trend from 2004 to 2020", fig.width=8, fig.height=4, echo = FALSE}
+#create a bar plot to illustrate 
+toronto_homicides_clean_01 %>% 
+  count(occurrence_year) %>% 
+  ggplot(aes(x = occurrence_year,
+             y = n)) +
+  geom_bar(stat = "identity") +
+  theme_minimal() +
+  labs(x = "Occurrence year",
+       y = "Number of homicides") +
+  geom_text(aes(y = n,
+                label = n,
+                vjust = 1.5,
+                ))
+  
+
+```
+
+The TPS has classified homicides into 3 categories: Shooting, Stabbing and Other. Investigating how people were killed is essential to figure out how public policy or police operations can be improved to prevent possible homicides. In (Figure \@ref(fig:homicide)), several observations can be made. It is clear that perpetrators preferred shooting over any other means of killing. This indicates a possible flaw in Canada firearms control. Homicides by shooting has been driving the trend in general while stabbing and other means of killing have been fluctuating; they remained in the 5 to 26 range over the years.
+
+```{r homicide, fig.cap = "Distribution of homicide types in Toronto from 2014 to 2020", fig.width=8, fig.height=4, echo= FALSE}
+# create a line plot to investigate the differences in the trends of the homicide types
+toronto_homicides_clean_01 %>% 
+  count(occurrence_year, homicide_type) %>%
+  ggplot(aes(x = occurrence_year, y = n, color = homicide_type)) + 
+  geom_line() +
+  labs(x = "Occurrence Year",
+       y = "Number of homicides",
+       color = "Homicide type") +
+  theme_minimal() +
+  scale_fill_brewer(palette = "Blues") +
+  theme(legend.position = "bottom")
+```
+
+The number of homicides has been volatile over the years, on the decrease in 2019 and 2020. In (Figure \@ref(fig:month)), we look at the cumulative homicide count across the year. We found that July has been the deadliest month. July, August and September have recorded the higher occurrences in general while cumulative homicide count are similar for the other months. From this graph, it is difficult to establish any relationship between months and homicide. 
+
+```{r month, fig.cap="Cumulative homicide count for calendar months", echo=FALSE, fig.height=4, fig.width=8}
+# plot a barplot to illustrate the monthly trend
+toronto_homicides_clean_03 %>% 
+  ggplot(aes(x = occurrence_month)) +
+  geom_bar(position = "dodge") +
+  theme_minimal() +
+  labs(x = "Occurrence month",
+       y = "Total number of homicides") 
+  
+```
+
+Toronto consists of 140 neighbourhoods. From (Table \@ref(tab:neighbourhood)), Moss Park neighbourhood has recorded the highest homicide count with 31 occurrences over 17 years. Out of the 140 neighbourhoods, 39 of them recorded more than 10 homicides during the period 2004 to 2020. 
+```{r neighbourhood, echo = FALSE, message=FALSE}
+#creating a table showing homicide count for neighbourhoods
+toronto_homicides_clean_03$geometry <- NULL
+
+toronto_homicides_clean_03 %>% 
+  count(neighbourhood) %>% 
+  arrange(desc(n)) %>% 
+  slice(1:10) %>% 
+  kable(
+    caption = "Top ten neighbourhoods with highest number of homicides from 2004 to 2020",
+    col.names = c("neighbourhood", "Homicide count"),
+    booktabs = TRUE,
+    linesep = "",
+    align = c("c", "c")
+  )
+
+more_than_10 <- toronto_homicides_clean_03 %>% 
+  count(neighbourhood) %>% 
+  arrange(desc(n)) %>% 
+  filter(n > 10)
+```
 
 
 
-# Model
-
-\begin{equation}
-Pr(\theta | y) = \frac{Pr(y | \theta) Pr(\theta)}{Pr(y)}  (\#eq:bayes)
-\end{equation}
-
-Equation \@ref(eq:bayes) seems useful, eh?
-
-Here's a dumb example of how to use some references: In paper we run our analysis in `R` [@citeR]. We also use the `tidyverse` which was written by @thereferencecanbewhatever If we were interested in baseball data then @citeLahman could be useful. 
-
-We can use maths by including latex between dollar signs, for instance $\theta$.
-
-
-# Results
-
-# Discussion
-
-## First discussion point
-
-If my paper were 10 pages, then should be be at least 2.5 pages. The discussion is a chance to show off what you know and what you learnt from all this. 
-
-## Second discussion point
-
-## Third discussion point
-
-## Weaknesses and next steps
-
-Weaknesses and next steps should also be included.
-
-\newpage
-
-\appendix
-
-# Appendix {-}
-
-
-# Additional details
 
 
 \newpage
