--- a/starter folder/outputs/paper/references.bib
+++ b/starter folder/outputs/paper/references.bib
@@ -7,8 +7,42 @@
     url = {https://www.R-project.org/},
   }
   
+@Manual{citejanitor,
+    title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
+    author = {Sam Firke},
+    year = {2021},
+    note = {R package version 2.1.0},
+    url = {https://CRAN.R-project.org/package=janitor},
+  }
   
-@Article{thereferencecanbewhatever,
+@InCollection{citeknitr,
+    booktitle = {Implementing Reproducible Computational Research},
+    editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
+    title = {knitr: A Comprehensive Tool for Reproducible Research in {R}},
+    author = {Yihui Xie},
+    publisher = {Chapman and Hall/CRC},
+    year = {2014},
+    note = {ISBN 978-1466561595},
+    url = {http://www.crcpress.com/product/isbn/9781466561595},
+  }
+  
+ @Manual{citeopendatatoronto,
+    title = {opendatatoronto: Access the City of Toronto Open Data Portal},
+    author = {Sharla Gelfand},
+    year = {2020},
+    note = {R package version 0.1.4},
+    url = {https://CRAN.R-project.org/package=opendatatoronto},
+  }
+  
+@Manual{citedplyr,
+    title = {dplyr: A Grammar of Data Manipulation},
+    author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+    year = {2021},
+    note = {R package version 1.0.7},
+    url = {https://CRAN.R-project.org/package=dplyr},
+  }
+  
+@Article{citetidyverse,
     title = {Welcome to the {tidyverse}},
     author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
     year = {2019},
@@ -17,13 +51,30 @@
     number = {43},
     pages = {1686},
     doi = {10.21105/joss.01686},
-  }  
+  }
   
+@Manual{citeASR,
+    title = {Toronto Police Service}, 
+    year = {2022}, 
+    url = {https://data.torontopolice.on.ca/pages/annualstatisticalreport}
+  }
   
-@Manual{citeLahman,
-    title = {Lahman: Sean `Lahman' Baseball Database},
-    author = {Michael Friendly and Chris Dalzell and Martin Monkman and Dennis Murphy},
-    year = {2020},
-    note = {R package version 8.0-0},
-    url = {https://CRAN.R-project.org/package=Lahman},
-  }  
+@Manual{citekableExtra,
+    title = {kableExtra: Construct Complex Table with 'kable' and Pipe Syntax},
+    author = {Hao Zhu},
+    year = {2021},
+    note = {R package version 1.3.4},
+    url = {https://CRAN.R-project.org/package=kableExtra},
+  }
+  
+ @Article{citesf,
+    author = {Edzer Pebesma},
+    title = {{Simple Features for R: Standardized Support for Spatial Vector Data}},
+    year = {2018},
+    journal = {{The R Journal}},
+    doi = {10.32614/RJ-2018-009},
+    url = {https://doi.org/10.32614/RJ-2018-009},
+    pages = {439--446},
+    volume = {10},
+    number = {1},
+  }
