--- a/starter folder/outputs/paper/references.bib
+++ b/starter folder/outputs/paper/references.bib
@@ -78,3 +78,60 @@
     volume = {10},
     number = {1},
   }
+  
+@Manual{citestudy,
+    author = {Myrna Dawson},
+    title = {Criminal justice outcomes in intimate and non-intimate partner homicide cases},
+    year = {2004},
+    url = {https://www.justice.gc.ca/eng/rp-pr/csj-sjc/crime/rr04_6/rr04_6.pdf}
+  }
+
+@Manual{citesocio,
+    author = {Sara K. Thompson},
+    title = {The Spatial Distribution and Social ecology of "Public" and "Private" Homicide Types in Toronto: A Case for Data Disaggregation},
+    year = {2015},
+    journal = {SAGE Publications},
+    doi = {10.1177/1088767914523965},
+    url = {https://heinonline-org.myaccess.library.utoronto.ca/HOL/Page?collection=journals&handle=hein.journals/homcst19&id=145&men_tab=srchresults}
+    }
+    
+@article{citeHarinam,
+    author = {Harinam, Vincent},
+    title = {Examining Micro-Level Homicide Patterns in Toronto, 1967 Through 2003},
+    journal = {Canadian Journal of Criminology and Criminal Justice},
+    volume = {62},
+    number = {2},
+    pages = {44-63},
+    year = {2020},
+    doi = {10.3138/cjccj.2019-0063},
+
+    URL = { 
+        https://doi.org/10.3138/cjccj.2019-0063
+    
+    },
+    eprint = { 
+        https://doi.org/10.3138/cjccj.2019-0063
+    
+  }}
+
+@Manual{citestat,
+    author = {Amelia Amstrong and Brianna Jaffray},
+    title = {Homicide in Canada, 2020},
+    year = {2021},
+    url = {https://www150.statcan.gc.ca/n1/pub/85-002-x/2021001/article/00017-eng.htm}
+    }
+    
+@Manual{citekeenan,
+    author = {Edward Keenan},
+    title = {Edward Keenan: We owe it to Toronto's homicide victims to look beyond law enforcement},
+    year = {2018},
+    journal = {The Toronto Star(Online), Toronto, Torstar Syndication Services},
+    url = {http://myaccess.library.utoronto.ca/login?qurl=https%3A%2F%2Fwww.proquest.com%2Fblogs-podcasts-websites%2Fedward-keenan-we-owe-torontos-homicide-victims%2Fdocview%2F2136281256%2Fse-2%3Faccountid%3D14771}
+    }
+
+@Manual{citegun,
+    author = {Adrian Humphreys},
+    title = {Toronto gun violence fuelled by U.S.'gun culture' and pandemic mental-health issues:police chief},
+    year = {2021},
+    journal = {National Post},
+    url = {https://nationalpost.com/news/canada/toronto-gun-violence-fuelled-by-u-s-gun-culture-and-pandemic-mental-health-issues-police-chief}}
